--- a/package.json
+++ b/package.json
@@ -2,10 +2,15 @@
   "name": "backendfullstackproject",
   "version": "1.0.0",
   "description": "\"backend\"",
+  "type": "module",
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "author": "Naaz",
-  "license": "ISC"
+  "license": "ISC",
+  "dependencies": {
+    "nodemon": "^3.1.10"
+  },
+  "devDependencies": {}
 }
