--- a/package.json
+++ b/package.json
@@ -12,5 +12,7 @@
   "dependencies": {
     "nodemon": "^3.1.10"
   },
-  "devDependencies": {}
+  "devDependencies": {
+    "prettier": "^3.5.3"
+  }
 }
