--- a/package.json
+++ b/package.json
@@ -10,6 +10,8 @@
   "author": "Naaz",
   "license": "ISC",
   "dependencies": {
+    "cookie-parser": "^1.4.7",
+    "cors": "^2.8.5",
     "dotenv": "^16.5.0",
     "express": "^5.1.0",
     "mongoose": "^8.15.1",
