--- a/.env.sample
+++ b/.env.sample
@@ -1,5 +1,9 @@
 PORT=8000
 MONGODB_URI=mongodb+srv://naazb597:74W2eW9lUGYn2uur@cluster1.vria8sp.mongodb.net/
 CORS_ORIGIN=*
+ACCESS_TOKEN_SECRET=chaiorcode
+ACEES_TOKEN_EXPIRY=1d
+REFRESH_TOKEN_SECRET=bjhgjgssdfjhvhj
+REFRESH_TOKEN_EXPIRY=10d
 
 
